--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,10 @@ on:
     - cron: '* * * * *'
   workflow_dispatch:
 
+defaults:
+  run:
+    working-directory: ./scripts
+
 jobs:
   update-readme:
     runs-on: ubuntu-latest
@@ -22,13 +26,11 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-        working-directory: ./scripts
 
       - name: Update README with the latest YouTube videos
         env:
           YOUTUBE_API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
         run: npm start
-        working-directory: ./scripts
       
       - name: Commit and push if changed
         run: |
