--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,6 @@ jobs:
         run: |
           git config --global user.email "jesuslagaresgalan@gmail.com"
           git config --global user.name "Jesús Lagares"
-          git add README.md
+          git add ../README.md
           git commit -m "Updated README with the latest YouTube videos" -a || echo "No changes to commit"
           git push
